--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Roboto+Condensed:wght@300&family=Roboto:ital@1&family=Rubik+Beastly&family=Ubuntu&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mulish', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-brand{
+    color: black !important;
+    font-size: 1.9rem !important;
+}
+
+.navbar-nav a:hover{
+    color: blue !important;
+}
+
+#header{
+    width: 100%;
+    height: 80vh;
+    margin-top: 30px;
+}
+
+#header h1{
+    color: black;
+    font-size: 32px;
+}
+
+#header h2{
+    color: black;
+    font-size: 22px;
+}
+
+#header .btn-get-started{
+    font-weight: 700;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 5px 20px;
+    border-radius: 50px;
+    color: black;
+    transition: 0.5s;
+    text-decoration: none;
+    border: 2px solid blueviolet;
+}
+
+#header .btn-get-started:hover{
+    background: aqua;
+    color: white;
+}
+
+.header-img{
+    text-align: right;
+}
+
+.brand-name{
+    color: blue;
 }
